[gd_scene load_steps=5 format=3 uid="uid://b4rlvisoc3le"]

[ext_resource type="Script" path="res://energy.gd" id="1_n7ich"]
[ext_resource type="PackedScene" uid="uid://yfsuiht84q67" path="res://energy_node.tscn" id="3_lr28y"]
[ext_resource type="StyleBox" uid="uid://b77fsed8qvjeb" path="res://mail_button_exit.tres" id="5_1np8v"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v312h"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.670588, 0.419608, 0.156863, 1)
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35

[node name="Energy" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -497.0
offset_top = -278.0
offset_right = 497.0
offset_bottom = 278.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_v312h")
script = ExtResource("1_n7ich")
total_energy = 7
metadata/_edit_lock_ = true

[node name="ExitButton" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -31.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_styles/normal = ExtResource("5_1np8v")
theme_override_styles/hover = ExtResource("5_1np8v")
theme_override_styles/pressed = ExtResource("5_1np8v")
theme_override_styles/disabled = ExtResource("5_1np8v")
theme_override_styles/focus = ExtResource("5_1np8v")
text = "X"

[node name="CenterContainer" type="CenterContainer" parent="."]
clip_contents = true
offset_right = 991.0
offset_bottom = 554.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
clip_contents = true
offset_left = 107.0
offset_top = 149.0
offset_right = 883.0
offset_bottom = 405.0

[node name="EnergyNode" parent="CenterContainer/HBoxContainer" instance=ExtResource("3_lr28y")]
node_name = "LIGHTS"

[node name="EnergyNode2" parent="CenterContainer/HBoxContainer" instance=ExtResource("3_lr28y")]
offset_left = 260.0
offset_right = 516.0
node_name = "AIR"

[node name="EnergyNode3" parent="CenterContainer/HBoxContainer" instance=ExtResource("3_lr28y")]
offset_left = 520.0
offset_right = 776.0
node_name = "EXTING..."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 10

[node name="RemaningEnergy" type="Label" parent="HBoxContainer"]
offset_top = 7.0
offset_right = 144.0
offset_bottom = 33.0
text = "Remaining energy:"

[node name="RemaningEnergyValue" type="Label" parent="HBoxContainer"]
offset_left = 154.0
offset_top = 7.0
offset_right = 164.0
offset_bottom = 33.0
text = "0"

[node name="UsedEnergy" type="Label" parent="HBoxContainer"]
offset_left = 174.0
offset_top = 7.0
offset_right = 275.0
offset_bottom = 33.0
text = "Used energy:"

[node name="UsedEnergyValue" type="Label" parent="HBoxContainer"]
offset_left = 285.0
offset_top = 7.0
offset_right = 295.0
offset_bottom = 33.0
text = "0"

[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
